Fix Align navbar heading to the left when using full width

--- a/web/styles/zulip.css
+++ b/web/styles/zulip.css
@@ -149,6 +149,10 @@ p.n-margin {
     display: none;
 }
 
+.column-middle-align.fluid_layout_width {
+    margin-left: 168px; 
+}
+
 .alert-zulip-logo,
 .top-messages-logo,
 .bottom-messages-logo {
